fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ div,
 body {
   margin: 0px;
   padding: 0px;
+  /* overflow: hidden */
+}
+
+body{
   overflow: hidden
 }
 
